# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://github.com/johnthagen/min-sized-rust

[package]
name = "iterm"
description = "Terminal workspace (screen, tmux, zellij)"
repository = "https://github.com/iydon/iterm"
readme = "README.md"
keywords = ["screen", "tmux", "zellij"]
authors = ["Iydon Liang <liangiydon@gmail.com>"]
categories = ["accessibility", "api-bindings", "command-line-utilities"]
license = "MIT"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = "4.4.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
